[package]
name = "podai-refine-color"
version = "0.1.0"
description = "A Tauri App for printer API testing"
authors = ["you"]
edition = "2021"
build = "build.rs"
[lib]
name = "podai_refine_color_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.0.0-beta"
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
